Well, it sorta does something now. It makes a request to the twitter search API, but doesn't seem to get any results.
I had to figure out how to serve static files which are weird the in same way that I think templates are weird. There seems to be some kind of collection process for static files when they're deployed, so I'm not sure how this will work on the server.

I haven't done any JSONP stuff before, so I had to look that up. And I spent some time looking into CORS (Cross-Origin Resource Sharing). My initial impression was that you could specify which URLs the browser would let you make requests to, but it's actually a server-side thing that will let requests from other URLs return normal JSON. So Twitter would have to allow my app access. That's probably not going to happen.

--- a/twitter_thing/templates/index.html
+++ b/twitter_thing/templates/index.html
@@ -1,3 +1,6 @@
 <h1>
 	Hellooooooooo, nurse!
 </h1>
+
+<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
+<script src='/static/twitter_thing.js'></script>
