--- a/twitter_thing/templates/index.html
+++ b/twitter_thing/templates/index.html
@@ -1,6 +1,4 @@
-<h1>
-	Hellooooooooo, nurse!
-</h1>
+<div id='images'></div>
 
 <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
 <script src='/static/twitter_thing.js'></script>
