Good designers borrow, great designers steal outright.
I'm not a designer, but I can still steal. Copied the twitter layout to get a start on styling.

--- a/twitter_thing/templates/index.html
+++ b/twitter_thing/templates/index.html
@@ -1,4 +1,6 @@
-<div id='images'></div>
-
-<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
-<script src='/static/twitter_thing.js'></script>
+{% extends "layout.html" %}
+{% block content %}
+<div class='wrapper'>
+	<div id='images'></div>
+</div>
+{% endblock %}
