--- a/twitter_thing/templates/index.html
+++ b/twitter_thing/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
+<div id='staging'></div>
 <div class='wrapper'>
 	<div id='images'></div>
 </div>
+
 {% endblock %}
